# gbla

./: .gitignore  AUTHORS  Makefile.am  README  compile_binaires.sh  config.h.in  configure.ac  gb  gb.pc.in  gbla.pc.in
cli/: gb.c  gb.h  gbla.c  gbla.h  io.c  io.h
draft/: Makefile  config.h  conv_magma_to_gbla.c  converter.c  draft.c  dumb_write.c  dump_matrix.c  dump_matrix.h  dump_matrix_orig.c  echelon.h  fflas_reduce.cpp  field.h  field_ops.h  io.h  macros.h  matrix.h  ouvrir.h  printer.h  reduce_B.h  reduce_B_omp.h  reduce_C.h  reduce_C_omp.h  reduce_C_tools.h  runit.c  selecter.h  sparseops.h  sparseops_block.h  test.c  tools.h  trash.c  types.h
draft/attic/: Makefile  dumb_write.c  dump_matrix_orig.c  trash.c
m4/: ax_blas.m4  ax_cache_size.m4  ax_ext.m4  blas-check.m4
src/: cl-helper.c  cl-helper.h  cl-timing.h  elim.c  elim.h  elimination.c  elimination.h  gb_config.h.in  gbla_config.h.in  mapping.c  mapping.h  maps.c  maps.h  matrix.c  matrix.h  sm.c  sm.h  sparse_matrix.c  sparse_matrix.h  typedefs.h  types.h
src/cli/: gb.c  gb.h
test/: Makefile.am  read-jcf-matrix-density.c  read-jcf-matrix-mod.c  read-jcf-matrix-ncols.c  read-jcf-matrix-nnz.c  read-jcf-matrix-nrows.c  unit-tests.c  unit-tests.h  unit-tests2.c
test/examples/: Makefile.am  jcf-type-f4-kat12-mat1  jcf-type-f4-kat12-mat1.pbm
tools/: Makefile  converter  converter.c  doit.sh  dump_matrix  dump_matrix.c  dump_matrix.h  macros.h  ouvrir.h  print_helper.h  selecter.h  tools.h  types.h
